
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int num; int smashaddr; int writeaddr; char* name; } ;


 int exit (int) ;
 int printf (char*,...) ;
 TYPE_1__* target ;

int
usage ( char* name )
{
 int i;

 printf ( "\n" );
 printf ( "Note: all switches have to be specified!\n" );
 printf ( "You can choose between bind and cb shellcode later!\n" );
 printf ( "\n" );
 printf ( "Usage: %s -h <tip> -p <tport> -l <cbip> -t <target>\n", name );
   printf ( "\n" );
 printf ( "Targets\n\n" );
 for ( i = 0; i < 2; i++ )
  printf ( "\t[%d] [0x%08x] [0x%08x] [%s]\n", target[i].num, target[i].smashaddr, target[i].writeaddr, target[i].name );
 printf ( "\n" );
 exit ( 1 );
}
